--- a/OnlineShop/app/src/main/AndroidManifest.xml
+++ b/OnlineShop/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     package="tppa.lab2.onlineshop">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <uses-feature android:name="android.hardware.Camera"/>
 
     <application
         android:allowBackup="true"
@@ -10,7 +14,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:requestLegacyExternalStorage="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".CameraActivity"></activity>
         <activity android:name=".SensorsActivity" />
         <activity android:name=".SharedPreferencesActivity" />
         <activity android:name=".ProductActivity" />
